--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "node-ts-webpack-setup",
   "version": "1.0.0",
   "main": "src/index.js",
-  "license": "MIT",
+  "author": "Pranav Jagtap",
+  "license": "ISC",
   "scripts": {
     "build": "webpack",
-    "start": "nodemon build/index.js"
+    "watch": "webpack --debug --watch",
+    "start": "webpack && nodemon build/index.js"
   },
   "devDependencies": {
     "@types/node": "^12.0.10",
     "nodemon": "^1.18.10",
+    "nodemon-webpack-plugin": "^4.0.8",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-shell-plugin": "^0.5.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@types/express": "^4.16.1",
